[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemath-cryptographic-functions-library"
version = "0.1.0"
description = "A SageMath library for cryptographic functions"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Mille Caroline Høeg", email = "mille.hoeg@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Framework :: SageMath",
]
keywords = ["sagemath", "cryptography", "APN", "boolean-functions", "finite-fields"]

[project.urls]
Homepage = "https://github.com/hoeeg/SageMath_library_for_cryptographic_functions"

[tool.setuptools.packages.find]
include = ["sagemath_cryptographic_functions_library*"]