[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sagemath-cryptographic-functions-library"
version = "0.1.2"
description = "A SageMath library for cryptographic functions"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Mille Caroline Høeg", email = "mille.hoeg@gmail.com" }]
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
keywords = ["sagemath", "cryptography", "APN", "boolean-functions", "finite-fields"]

[project.urls]
Homepage = "https://github.com/hoeeg/SageMath_library_for_cryptographic_functions"

[tool.setuptools.packages.find]
include = ["sagemath_cryptographic_functions_library*"]